<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants">

    <TextView
        android:id="@+id/label_name"
        android:labelFor="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="0dp"
        android:text="@string/racket_name"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/name"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/label_name"
        android:layout_alignBaseline="@+id/label_name"
        android:inputType="text"
        android:textSize="20sp"
        android:background="@color/colorMinorTransparency"
        android:imeOptions="actionDone"
        android:maxLength="20" />

    <TextView
        android:id="@+id/label_metrics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_toStartOf="@+id/button_metric_info"
        android:text="@string/performance_stats"
        android:textStyle="bold"
        android:textSize="16sp"/>
    <ImageButton
        android:id="@+id/button_metric_info"
        android:src="@drawable/info"
        android:tint="#FFFFFFFF"
        android:background="@android:color/transparent"
        android:layout_marginStart="10dp"
        android:layout_alignTop="@+id/label_metrics"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:contentDescription="@string/stats_info" />

    <TextView
        android:id="@+id/label_parameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/performance_view"
        android:text="@string/racket_parameters"
        android:textStyle="bold"
        android:textSize="16sp"/>
    <ImageButton
        android:id="@+id/button_info"
        android:src="@drawable/info"
        android:tint="#FFFFFFFF"
        android:background="@android:color/transparent"
        android:layout_marginStart="10dp"
        android:layout_alignTop="@+id/label_parameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/label_parameters"
        android:layout_below="@id/performance_view"
        android:contentDescription="@string/param_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_to_list"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_parameter_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_strings"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_appraise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/appraise"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/racket_parameters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_parameters"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_head_size"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/head_size"/>
            <SeekBar
                android:id="@+id/seekbar_head_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="10"/>
            <TextView
                android:id="@+id/head_size"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_weight"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/weight"/>
            <SeekBar
                android:id="@+id/seekbar_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="8"/>
            <TextView
                android:id="@+id/weight"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_balance"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/balance"/>
            <SeekBar
                android:id="@+id/seekbar_balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="8"/>
            <TextView
                android:id="@+id/balance"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_length"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/length"/>

            <SeekBar
                android:id="@+id/seekbar_length"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="4"/>

            <TextView
                android:id="@+id/length"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_stiffness"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/stiffness"/>
            <SeekBar
                android:id="@+id/seekbar_stiffness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="4"/>
            <TextView
                android:id="@+id/stiffness"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/string_parameters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_info"
        android:visibility="invisible"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_stringtype_main"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/strings"/>
            <Spinner
                android:id="@+id/spinner_stringtype_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/mains"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_stringtype_crosses"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/strings"/>
            <Spinner
                android:id="@+id/spinner_stringtype_crosses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/crosses"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_tension"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/tension"/>
            <SeekBar
                android:id="@+id/seekbar_tension"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="8"/>
            <TextView
                android:id="@+id/tension"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_num_mains"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/mains"/>
            <SeekBar
                android:id="@+id/seekbar_num_mains"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="2"/>
            <TextView
                android:id="@+id/num_mains"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_num_crosses"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/crosses"/>

            <SeekBar
                android:id="@+id/seekbar_num_crosses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="2"/>

            <TextView
                android:id="@+id/num_crosses"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_gauge"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/gauge"/>
            <SeekBar
                android:id="@+id/seekbar_gauge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="4"/>
            <TextView
                android:id="@+id/gauge"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/performance_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/label_metrics"
        android:layout_marginTop="12dp"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/racket_view"
            android:layout_height="120dp"
            android:layout_width="100dp"
            android:layout_margin="6dp"
            android:background="#FFFFFFFF"
            android:src="@drawable/ic_racket"
            android:contentDescription="@string/racket_view">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp">
                <TextView
                    android:id="@+id/label_power"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/power"/>
                <ProgressBar
                    android:id="@+id/power"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp">
                <TextView
                    android:id="@+id/label_spin"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/spin"/>
                <ProgressBar
                    android:id="@+id/spin"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp">
                <TextView
                    android:id="@+id/label_swing_speed"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/swing_speed"/>
                <ProgressBar
                    android:id="@+id/swing_speed"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp">
                <TextView
                    android:id="@+id/label_control"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/control"/>
                <ProgressBar
                    android:id="@+id/control"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/label_feel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/volley"/>
                <ProgressBar
                    android:id="@+id/volley"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>