<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.depaul.csc472.m.mcclellan.mcclellanmracketbuilder.ListActivity">

    <ImageView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="14dp"
        android:src="@drawable/ic_title"
        android:tint="@android:color/white"
        android:contentDescription="@string/title_logo" />
    <TextView
        android:id="@+id/add_racket_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:text="@string/add_a_racket"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/button_add_racket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/add_racket_label"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:layout_centerVertical="true"
        android:layout_below="@+id/title"
        android:src="@drawable/ic_add"
        android:tint="#FFFFFFFF"
        android:contentDescription="@string/add_racket_icon" />
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_add_racket"
        android:layout_marginTop="14dp"
        android:longClickable="true"/>
</RelativeLayout>
